# iter-merge

./: Cargo.toml  README.md  toggle_fuzz_config.sh
.github/workflows/: Tests.yml  rust.yml
benches/: benchmarks.rs
benches/code/: mod.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_correctness.rs  fuzz_usage.rs
src/: builder.rs  comparators.rs  convenience.rs  internal.rs  iter.rs  lib.rs  merge_iter.rs  storage.rs  tests.rs
src/comparators/: tie_breaker.rs
src/internal/: heap.rs  hole.rs  nums.rs  pointers.rs
src/merge_iter/: builder.rs  into_iters.rs
src/storage/: array.rs  stackvec.rs  vec.rs
src/tests/: data.rs  order.rs
tests/: fuzz.rs  iter_test.rs
tests/helpers/: mod.rs
