[package]
name = "iter-merge"
version = "0.2.0"
edition = "2021"
rust-version = "1.68"
########## For fuzzing ##########
## edition = "2024"
## rust-version = "1.85"
authors = ["Andrew Morozko"]
description = "A high-performance iterator merging library"
readme = "README.md"
homepage = "https://github.com/Andrew-Morozko/iter-merge"
repository = "https://github.com/Andrew-Morozko/iter-merge"
license = "MIT OR Apache-2.0"
keywords = ["iterator", "merge", "sort", "no-std"]
categories = ["algorithms", "no-std", "no-std::no-alloc"]

[features]
default = ["vec_storage"]
vec_storage = []
stackvec_storage = ["dep:stackvector"]
forbid_unsafe = []

[dependencies]
stackvector = {version = "1.1.1", optional = true}

[target.'cfg(benchmarking)'.dev-dependencies]
criterion = "0.7.0"
itertools = "0.14.0"
rand = "0.9.2"

[[bench]]
name = "benchmarks"
harness = false

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(benchmarking)', 'cfg(fuzzing)'] }

########## For fuzzing ##########
## [profile.fuzz]
## inherits = "bench"
## debug-assertions = true

## [target.'cfg(fuzzing)'.dev-dependencies]
## fuzzcheck = { git = "https://github.com/loiclec/fuzzcheck-rs", rev = "b9ffecd" }
## serde = { version = "1.0", features = ["derive"] }
